--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -44,10 +44,10 @@
 	</h1>
 	<div id ="bookAuthors" class="stacked">
 		<span class ="by SmallText">by </span>
-		<span>{{displayItem.author}}</span>
+		<span>{{displayItem.Author}}</span>
 	</div>
 	<div class="descriptionContainer ">
-			{{displayItem.review}}
+			{{displayItem.Review}}
 	</div>
 
 </div>
